--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>odin-recipes-project</title>
+    <title>Lasagna</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Lasagna</h1>
+    </header>
 </body>
 </html>
