link the lasgna page to the index.html page and vice-versa

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>odin-recipes-project</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <li>home</li>
+                <li><a href="recipes/lasagna.html">Lasagna</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main></main>
 </body>
 </html>
