--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <header>
+        <nav>
+            <ul>
+                <li><a href="../index.html">home</a></li>
+            </ul>
+        </nav>
         <h1>Lasagna</h1>
     </header>
 </body>
