add images folder to the lasagna directory, add another recipe file chicken shawarma

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <ul>
                 <li>home</li>
                 <li><a href="recipes/lasagna.html">Lasagna</a></li>
+                <li><a href="recipes/chicken-shawarma.html">Chicken Shawarma</a></li>
             </ul>
         </nav>
     </header>
