--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -15,5 +15,48 @@
         </nav>
         <h1>Lasagna</h1>
     </header>
+    <main>
+        <img src="lasgna-images/lasagna-one.jpg" alt="finished lasagna dish"/>
+        <section>
+            <h2>Finished Lasagna Recipe</h2>
+            <p>A well presented lasagna recipe</p>
+        </section>
+        <section>
+            <h2>Ingredients</h2>
+            <ul>
+                <li>cooking spray</li>
+                <li>1 tablespoon olive oil</li>
+                <li>1 pound ground beef</li>
+                <li>2 teaspoons salt, divided</li>
+                <li>1 teaspoon dried oregano</li>
+                <li>1 container ricotta cheese</li>
+                <li>1 egg</li>
+                <li>1 teaspoon nutmeg</li>
+                <li>2 cups shredded mozzarella cheese, divided</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Directions</h2>
+            <ol>
+                <li>step 1</li>
+                <p>preheat the oven to 375 degree F. Grease an 8-inch baking dish wish cooking spray</p>
+                <li>step 2</li>
+                <p>Pat dry zucchini slices with a paper towel to get rid of excess moisture</p>
+                <li>step 3</li>
+                <p>Heat olive oil in a saucepan over medium-high heat.Add ground beef; cook until browned, 5 to 8 minutes.Add marinara sauce, 1 teaspoon salt, oregano, and pepper; simmer for 10 minutes</p>
+                <li>step 4</li>
+                <p>Combine remaining 1 teaspoon salt, ricotta cheese,egg, and nutmeg in a bowl; mix well</p>
+                <li>step 5</li>
+                <p>make 1 layer of zucchini slices in the prepared baking dish. Cover with 1//2 of the sauce. Add another layer of zucchini slices. Spread ricotta mixture on top. Sprinkle with 1 cup mozarella cheese.Add another layer of zucchini slices; cover with the remaining sauce and top with 1 cup mozarella cheese and Parmesan cheese. cover baking dish with aluminium foil</p>
+                <li>step 6</li>
+                <p>Bake in the preheated oven for 30 minutes. Remove aluminium foil and bake until top is golden, about 15 minutes more</p>
+            </ol>
+        </section>
+        <section>
+            <h2>Nutrition Facts</h2>
+            <p><strong>Per Serving:</strong> 424 calories; protein 30.4g; carbohydrates 14.9g; fat 26.8g; cholesterol 117.4g; sodium 1426.6g.</p>
+        </section>
+
+    </main>
 </body>
 </html>
