add another recipe chicken shawarma recipes with a chicken shawarma images directory

--- a/recipes/chicken-shawarma.html
+++ b/recipes/chicken-shawarma.html
@@ -16,7 +16,44 @@
         <h1>Chicken Shawarma</h1>
     </header>
     <main>
-        
+        <section>
+            <img src="./chicken-shawarma-images/image.jpeg" alt="A chicken shawarma wrap"/>
+            <h2>A finished chicken shawarma wrap</h2>
+            <p>It is light and filling. it is divine</p>
+        </section>
+        <section>
+            <h2>Ingredients</h2>
+            <ul>
+                <li>2 tablespoons white vineger</li>
+                <li>2 tablespoons soy sauce</li>
+                <li>2 tablespoons garlic paste, divided</li>
+                <li>1 tablespoon salt</li>
+                <li>i tablespoon ginger paste</li>
+                <li>1 tablespoon salt</li>
+                <li>1 teaspoon ground black pepper</li>
+                <li>1 pound skinless, boneless chicken breast</li>
+                <li>3 potatoes, cut into fries</li>
+                <li>oil for frying</li>
+                <li>1 tablespoon vegetable oil</li>
+                <li>1 cup mayonnaise</li>
+                <li>8 pita breads, split</li>
+                <li>1 cup pickled cucumbers</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Directions</h2>
+            <ol>
+                <li>Mix vineger, soy sauce, 1 teaspoon garlic paste, ginger paste, salt, and pepper together in a shallow dish. Add chicken breasts; turn to coat.Marinate in the refrigerator for at least 30 minutes</li>
+                <li>Heat 1 tablespoon vegetavle oil in a large skillet over medium heat. Remove chicken breasts from the marinade and cook until browmned and no longer pink in the cebter, 6 to 8 minutes per side. Transfer to cutting board; slice into thin strips</li>
+                <li>Mix remaining 1 teaspoon garlic paste with myonnaise in a bowl</li>
+                <li>spread garlic mayonnaise inside pita breads. Fill each pita with French fries, chicken slices, and pickles</li>
+            </ol>
+        </section>
+        <section>
+            <h2>Nutritional Facts</h2>
+            <p><strong>Per Serving:</strong>529 calories; protein 17.8g; carbohydrates: 44.4g; fats 30.9g; cholesterol 39.6mg; sodium 1260.4mg</p>
+        </section>
+       
     </main>
 </body>
 </html>
