--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 <li>home</li>
                 <li><a href="recipes/lasagna.html">Lasagna</a></li>
                 <li><a href="recipes/chicken-shawarma.html">Chicken Shawarma</a></li>
+                <li><a href="recipes/pork-fried-rice.html">Pork Fried Rice</a></li>
             </ul>
         </nav>
     </header>
