add mote content to the pork fried rice recipes and an image file

--- a/recipes/pork-fried-rice.html
+++ b/recipes/pork-fried-rice.html
@@ -15,5 +15,37 @@
         </nav>
         <h1>Pork Fried Rice</h1>
     </header>
+    <main>
+        <section>
+            <img src="./pork-fried-rice-images/pork-fried-rice.jpeg" alt="finished pork fried rice recipe"/>
+            <p>this is a quick and easy meal to prepare and it tastes great</p>
+        </section>
+        <section>
+            <h2>Ingredients</h2>
+            <ul>
+                <li>1 tablespoon butter</li>
+                <li>1 boneless pork loin chop, cut into small pieces</li>
+                <li>1 cup chopped broccoli</li>
+                <li>1 green onion chopped</li>
+                <li>1 egg beaten</li>
+                <li>1 cup cold cooked rice</li>
+                <li>1 cup frozen peas</li>
+                <li>1 tablespoon garlic powder</li>
+                <li>1 teaspoon ground ginger</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Directions</h2>
+            <ol>
+                <li>Melt butter in a large non-stick skillet over medium heat. Cook and stir pork, carrot, broccoli, peas, and green onion in a melted butter pork is cooked though, 7 to 10 minutes. remove pork mixture to a bowl and return</li>
+                <li>Scramble egg in the skillet until completely. Return and pork mixture to the skillet. Stir rice, peas, soy sauce, garlic powder, and ground ginger into the pork mixture; cook and stir until heated, 7 to 10 minutes</li>
+
+            </ol>
+        </section>
+        <section>
+            <h2>Nutrition Facts</h2>
+            <p><strong>Per Serving:</strong>557 calories; protein 26.7g; carbohydrates 80.7g; fat 13.3g; cholesterol 136.6mg; sodium 814.9mg</p>
+        </section>
+    </main>
 </body>
 </html>
