add content to eggplant sanwich recipe

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <li><a href="recipes/lasagna.html">Lasagna</a></li>
                 <li><a href="recipes/chicken-shawarma.html">Chicken Shawarma</a></li>
                 <li><a href="recipes/pork-fried-rice.html">Pork Fried Rice</a></li>
+                <li><a href="recipes/eggplant-sandwiche.html">Eggplant Sandwiches</a></li>
             </ul>
         </nav>
     </header>
