add eggplant image to the eggplant recipes

--- a/recipes/eggplant-sandwiche.html
+++ b/recipes/eggplant-sandwiche.html
@@ -17,7 +17,7 @@
     </header>
     <main>
         <section>
-            <img />
+            <img src="./eggplant-sandwich-images/eggplant-sandwich-image.jpeg" alt="A finished eggplant sandwich recipe"/>
             <p>Roasted eggplant in a French roll with feta cheese, basil and garlic mayonnaise. This is my favorite sandwich of all time</p>
         </section>
         <section>
