add a new recipe roasted chicken sith skillet stuffing

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <li><a href="recipes/chicken-shawarma.html">Chicken Shawarma</a></li>
                 <li><a href="recipes/pork-fried-rice.html">Pork Fried Rice</a></li>
                 <li><a href="recipes/eggplant-sandwiche.html">Eggplant Sandwiches</a></li>
+                <li><a href="recipes/roast-chicken-with-skillet-stuffing.html">Roasted Chicken With Skillet Stuffing</a></li>
             </ul>
         </nav>
     </header>
