--- a/recipes/eggplant-sandwiche.html
+++ b/recipes/eggplant-sandwiche.html
@@ -24,8 +24,8 @@
             <h2>Ingredients</h2>
             <ul>
                 <li>1 small eggplant, halved and sliced</li>
-                <li>1 tablespoon olive oil, or as needed</li>
-                <li>1 cup of mayonnaise</li>
+                <li>1 3/4 tablespoon olive oil, or as needed</li>
+                <li>1 1/2 cup of mayonnaise</li>
                 <li>2 cloves garlic, minced</li>
                 <li>2 French sandwich rolls</li>
                 <li>1 small tomato sliced</li>
