--- a/recipes/roast-chicken-with-skillet-stuffing.html
+++ b/recipes/roast-chicken-with-skillet-stuffing.html
@@ -21,6 +21,24 @@
             <img src="roasted-chicken-with-skillet-stuffing-images/roasted-chicken-with-skillet-stuffing-image (1).jpeg" alt="finished recipe of roasted chicken with skillet stuffing"/>
             <p>Sliced French bread soaks up roasted chicken juices to make delicious skillet stuffing. Perfect for chilly winter evenings. Since it uses one pan, cleanup is a breeze</p>
         </section>
+        <section>
+            <h2>Ingredients</h2>
+            <ul>
+                <li>2 tablespoons olive oil</li>
+                <li>1/4 cup butter, divided</li>
+                <li>3 large onions, sliced</li>
+                <li>1 leek, sliced</li>
+                <li>2 teaspoons lemon zest</li>
+                <li>1/2 teaspoon dried thyme</li>
+                <li>1 teaspoon minced garlic</li>
+                <li>1/2 teaspoon red pepper flakes</li>
+                <li>1/4 cup chopped fresh flat-leaf parsley</li>
+                <li>1 whole chicken, rinsed and patted dry</li>
+                <li>Korsher salt and ground black pepper to taste</li>
+                <li>1/2 loaf French bread, cut into 3/4-inch slices</li>
+                <li>1/4 fresh lemon juice</li>
+            </ul>
+        </section>
     </main>
 </body>
 </html>
