add a quick stats section to the roasted chicken with skillet stuffing

--- a/recipes/roast-chicken-with-skillet-stuffing.html
+++ b/recipes/roast-chicken-with-skillet-stuffing.html
@@ -20,7 +20,19 @@
         <section>
             <img src="roasted-chicken-with-skillet-stuffing-images/roasted-chicken-with-skillet-stuffing-image (1).jpeg" alt="finished recipe of roasted chicken with skillet stuffing"/>
             <p>Sliced French bread soaks up roasted chicken juices to make delicious skillet stuffing. Perfect for chilly winter evenings. Since it uses one pan, cleanup is a breeze</p>
+            <div>
+                <h2>Quick stats</h2>
+                <ul>
+                    <li>Prep: 40mins</li>
+                    <li>Cook: 1 hr 15 mins</li>
+                    <li>Additional: 10 mins</li>
+                    <li>Total: 2 hrs 5 mins</li>
+                    <li>Servings: 6</li>
+                    <li>Yield: 1 chicken</li>
+                </ul>
+            </div>
         </section>
+
         <section>
             <h2>Ingredients</h2>
             <ul>
