add the directions section to the roasted chicken with skillet stuffing recipes

--- a/recipes/roast-chicken-with-skillet-stuffing.html
+++ b/recipes/roast-chicken-with-skillet-stuffing.html
@@ -46,10 +46,21 @@
                 <li>1/2 teaspoon red pepper flakes</li>
                 <li>1/4 cup chopped fresh flat-leaf parsley</li>
                 <li>1 whole chicken, rinsed and patted dry</li>
-                <li>Korsher salt and ground black pepper to taste</li>
+                <li>Korshner salt and ground black pepper to taste</li>
                 <li>1/2 loaf French bread, cut into 3/4-inch slices</li>
                 <li>1/4 fresh lemon juice</li>
             </ul>
+        </section>
+        <section>
+            <h2>Directions</h2>
+            <ol>
+                <li><p>Preheat oven to 375 degree F</p></li>
+                <li><p>Heat olive oil and 2 tablespoons butter in a large oven-safe skillet over medium heat.</p></li>
+                <li><p>Butterfly the chicken by remmoving th backbone, and pressing down on the breastbone to crack chicken open using a knife shears. open the 2 sides and spread them out like an open book. Rub the remaining 2 tablespoons butter all over th he chicken. Season with salt and pepper</p></li>
+                <li><p>Lay the bread onto the bottom of the same skillet; spread vegetable mixture over bread to make stuffing.Arrange chicken into a layer on top, skin side up. Pour lemon juice over chicken</p></li>
+                <li><p>Bake , uncovered , in the preheated oven until no longer pink at the bone and the juices run clear, 1 hour to 1 hour 30 minutes. An instant-read thermometer inserted into the thickest part of the thigh, near the bone, should read 165 degree F</p></li>
+                <li><p>Removechicken from the oven, cover with a doubled sheet of aluminium foil, and allow to rest ina warm area for 10 minutes before slicing into quarters. Spoon stuffing onto each serving and top with chicken</p></li>
+            </ol>
         </section>
     </main>
 </body>
