add nutritional facts to the roasted chicken with skillet stuffing

--- a/recipes/roast-chicken-with-skillet-stuffing.html
+++ b/recipes/roast-chicken-with-skillet-stuffing.html
@@ -59,8 +59,12 @@
                 <li><p>Butterfly the chicken by remmoving th backbone, and pressing down on the breastbone to crack chicken open using a knife shears. open the 2 sides and spread them out like an open book. Rub the remaining 2 tablespoons butter all over th he chicken. Season with salt and pepper</p></li>
                 <li><p>Lay the bread onto the bottom of the same skillet; spread vegetable mixture over bread to make stuffing.Arrange chicken into a layer on top, skin side up. Pour lemon juice over chicken</p></li>
                 <li><p>Bake , uncovered , in the preheated oven until no longer pink at the bone and the juices run clear, 1 hour to 1 hour 30 minutes. An instant-read thermometer inserted into the thickest part of the thigh, near the bone, should read 165 degree F</p></li>
-                <li><p>Removechicken from the oven, cover with a doubled sheet of aluminium foil, and allow to rest ina warm area for 10 minutes before slicing into quarters. Spoon stuffing onto each serving and top with chicken</p></li>
+                <li><p>Remove chicken from the oven, cover with a doubled sheet of aluminium foil, and allow to rest ina warm area for 10 minutes before slicing into quarters. Spoon stuffing onto each serving and top with chicken</p></li>
             </ol>
+        </section>
+        <section>
+            <h2>Nutritional Facts</h2>
+            <p>Per Serving; 757 calories; protein 48.3g; carbohydrates 33.2g; fat47.3g; cholesterol190.6mg; sodium 565.7mg</p>
         </section>
     </main>
 </body>
